# aiida-uppasd2

./: LICENSE  README.md  pyproject.toml
aiida_uppasd2/: UppASD_BaseWorkflow.py  UppASD_Calculations.py  UppASD_Clis.py  UppASD_GenericLoopWorkflow.py  UppASD_Parsers.py  __init__.py
aiida_uppasd2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/loop_B_T_phaseDiagram/file_for_aiida-uppasd2/: uppasd_aiida2_input.pkl  workflow_loop.py
examples/single_calculation/file_for_aiida-uppasd2/: test_uppasd_aiida_calculation.py
examples/single_calculation/result/remote_folder_localhost/: _aiidasubmit.sh  _scheduler-stdout.txt  averages.SCsurf_T.out  dmdata  inp.SCsurf_T.json  jij  mcinitial.SCsurf_T.out  restart.SCsurf_T.out  sknumber.SCsurf_T.out  totenergy.SCsurf_T.out  uppasd.SCsurf_T.yaml
examples/single_calculation/result/remote_folder_localhost/.aiida/: calcinfo.json  job_tmpl.json
examples/single_calculation/single_UppASD_calculation/: averages.SCsurf_T.out  coord.SCsurf_T.out  mcinitial.SCsurf_T.out  restart.SCsurf_T.out  sknumber.SCsurf_T.out  totenergy.SCsurf_T.out  uppasd.SCsurf_T.yaml
src/aiida_uppasd/calculations/: base.py
src/aiida_uppasd/parsers/: base.py
src/aiida_uppasd/workflows/: base.py  generic_loop.py
