[project]
name = "aiida-uppasd"
version = "2.0.1"
description = "AiiDA plugin for UppASD version 2"
authors = [{name = "Qichen Xu", email = "mxjk851@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Framework :: AiiDA"
]
keywords = ["aiida", "plugin"]
requires-python = ">=3.7"
dependencies = [
    "aiida-core>=2.0,<3",
]

[project.urls]
Source = "https://github.com/MXJK851/aiida-uppasd2"

[project.optional-dependencies]
testing = [
    "pgtest~=1.3.1",
    "wheel~=0.31",
    "coverage[toml]",
    "pytest~=6.0",
    "pytest-cov"
]
pre-commit = [
    "pre-commit~=2.2",
    "pylint~=2.15.10"
]

[project.entry-points."aiida.calculations"]
"uppasd.base" = "aiida_uppasd.calculations.base:UppasdBaseCalculation"

[project.entry-points."aiida.parsers"]
"uppasd.base" = "aiida_uppasd.parsers.base:UppasdBaseParser"

[project.entry-points."aiida.cmdline.data"]
"asd" = "aiida_uppasd.cli.commands:asd"

[project.entry-points.'aiida.workflows']
'uppasd.base' = 'aiida_uppasd.workflows.base:UppasdBaseWorkflow'
'uppasd.generic_loop' = 'aiida_uppasd.workflows.generic_loop:UppasdGenericLoopWorkflow'